# ccrag

./: README.md  pyproject.toml  search-logs
search_logs/: __init__.py  __main__.py  cli.py  embedding.py  indexer.py  logs.py  project.py
